<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.droiddessert.MainActivity">
    <item
        android:id="@+id/order"
        android:icon="@drawable/baseline_add_shopping_cart_24"
        android:title="@string/order"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/status"
        android:title="@string/status"
        android:icon="@drawable/baseline_error_24"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/favorites"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/favorites"
        android:visible="@bool/show_favorite_icon"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/contact_us"
        android:title="@string/contact_us"
        app:showAsAction="never" />

</menu>